@@ -1,6 +1,7 @@
 Revision history for Test-Class-Moose
 
 0.07
+        - Allow plans in method. See #84046 in RT queue (Steffen W)
         - Convert to Dist::Zilla
         - Runtests returns $self.
 
